aws-security-group-create.tf
#this is data source -- fetching vpc detaisl
data "aws_vpc" "arpit-vpc" {

    id = var.my-vpc-id

}

#creating security group

resource "aws_security_group" "arpit-security-group" {
  name        = var.my-sec-group-name
  description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = data.aws_vpc.arpit-vpc.id

  tags = {
    Name = "${var.my-sec-group-name}-allow_tls"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_tls_ipv4" {
  security_group_id = aws_security_group.arpit-security-group.id
  cidr_ipv4         = data.aws_vpc.arpit-vpc.cidr_block
  from_port         = 443
  ip_protocol       = "tcp"
  to_port           = 443
}

resource "aws_vpc_security_group_ingress_rule" "allow_tls_ipv6" {
  security_group_id = aws_security_group.arpit-security-group.id
   cidr_ipv4         = data.aws_vpc.arpit-vpc.cidr_block
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.arpit-security-group.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv6" {
  security_group_id = aws_security_group.arpit-security-group.id
  cidr_ipv6         = "::/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
